--- a/_posts/2019-06-08-document.md
+++ b/_posts/2019-06-08-document.md
@@ -8,4 +8,5 @@ tags: [Centos, MySQL]
 comments: true
 ---
 
-##首先你得拥有一个服务器： 推荐国外的。 国内的服务器价格虽然便宜，但是按流量收费。
+###首先你得拥有一个服务器： 推荐国外的。 国内的服务器价格虽然便宜，但是按流量收费。
+
