--- a/_posts/2019-6-08-centos7.md
+++ b/_posts/2019-6-08-centos7.md
@@ -19,9 +19,9 @@ comments: true
 
 
 
-###步骤
+### 步骤
 
-#####1 配置YUM源
+##### 1 配置YUM源
 
 > 在MySQL官网中下载YUM源rpm安装包：http://dev.mysql.com/downloads/repo/yum/ 
 >
@@ -84,7 +84,6 @@ comments: true
 > 找到 并添加   skip-grant-tables
 >
 > ```\#skip-grant-tables
-> 
 > datadir=/var/lib/mysql
 > socket=/var/lib/mysql/mysql.sock
 > ```
@@ -95,14 +94,15 @@ comments: true
 >
 > 执行sql 修改密码 
 >
-> ```**UPDATE** **user** **SET** **Password** = **password** ( '你的密码' ) **WHERE** **User** = 'root'; 
+> ```
+>**UPDATE** **user** **SET** **Password** = **password** ( '你的密码' ) **WHERE** **User** = 'root'; 
 > UPDATE user SET Password = password ( '你的密码' ) WHERE User = 'root'; 
 > ```
 >
 > 完成后刷新权限   
 >
 > ```
-> flush privileges ; 
+> flush privileges;
 > ```
 >
 > 再次重启数据库，并把 skip-grant-tables  注释。
