--- a/_posts/2019-6-08-centos7.md
+++ b/_posts/2019-6-08-centos7.md
@@ -83,14 +83,19 @@ comments: true
 >
 > 找到 并添加   skip-grant-tables
 >
-> ```\#skip-grant-tables
+> ```
+> skip-grant-tables//add this
 > datadir=/var/lib/mysql
 > socket=/var/lib/mysql/mysql.sock
 > ```
 >
 > 重启数据库  ```service mysqld restart ```
 >
-> 进入数据库  ```mysql -uroot```
+> 进入数据库  
+>```
+>use mysql;
+>mysql -uroot
+>```
 >
 > 执行sql 修改密码 
 >
