--- a/_posts/2019-6-08-centos7.md
+++ b/_posts/2019-6-08-centos7.md
@@ -93,17 +93,17 @@ comments: true
 >
 > 进入数据库  
 >```
->mysql
->use mysql;
 >mysql -uroot
+> USE mysql ; 
 >```
 >
 > 执行sql 修改密码 
 >
 > ```
 >**UPDATE** **user** **SET** **Password** = **password** ( '你的密码' ) **WHERE** **User** = 'root'; 
-> UPDATE user SET Password = password ( '你的密码' ) WHERE User = 'root'; 
-> ```
+> (5.6) UPDATE user SET Password = password ( '你的密码' ) WHERE User = 'root'; 
+> (5.7 )  update mysql.user set authentication_string=password('你的密码') where user='root'; 
+>```
 >
 > 完成后刷新权限   
 >
