--- a/_posts/2019-07-18-eclipse.md
+++ b/_posts/2019-07-18-eclipse.md
@@ -1,7 +1,7 @@
 - source not found
 mac eclipse 无法查看源码
 > 如图
-![错误图](https://note.youdao.com/favicon.ico)
+![错误图](http://i2.tiimg.com/696825/a46bd737610bf8cf.jpg)
 
 ### 步骤
 ##### 1 准备插件
